crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__constructor__call_init_explicitly.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/call_init_explicitly.lox
---
success: true
exit_code: 0
----- stdout -----
Foo.init(one)
Foo.init(two)
nil
init

----- stderr -----
