crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__constructor__early_return.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/early_return.lox
---
success: true
exit_code: 0
----- stdout -----
init
<Foo instance at [POINTER]>

----- stderr -----
